--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -41,3 +41,13 @@ tbody{
     color:  white;
     cursor: pointer;
 }
+.save__project-btn{
+    margin-top: 10px;
+    text-align: center;
+    border: none;
+    background-color: rgba(240, 248, 255, 0);
+}
+.save__project{
+    color: brown;
+    font-size: 30px;
+}
