--- a/src/App.css
+++ b/src/App.css
@@ -16,4 +16,14 @@ h1{
 .aside ul{
   line-height: 40px;
 }
+ul{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+ul button{
+  width: 100px;
+  background: none;
+  border: none;
+}
 
