--- a/src/pages/project-detail/projectDetail.css
+++ b/src/pages/project-detail/projectDetail.css
@@ -11,6 +11,7 @@
     text-align: right;
     width: 500px;
     margin-right: 15px;
+    margin-top: 3px;
 }
 .detail__value{
     line-height: 30px;
