--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -62,10 +62,17 @@ tbody{
   clip-path: polygon(50% 0,79% 90%,2% 35%,98% 35%,21% 90%); 
    */
 }
-.star:focus{
-    background-color: rgb(136, 143, 0);
+.savedStar{
+    background-color: rgb(174, 149, 10);
+    width: 30px;  
+  aspect-ratio: 1;
+  clip-path: polygon(50% 0,
+    calc(50%*(1 + sin(.4turn))) calc(50%*(1 - cos(.4turn))),
+    calc(50%*(1 - sin(.2turn))) calc(50%*(1 - cos(.2turn))),
+    calc(50%*(1 + sin(.2turn))) calc(50%*(1 - cos(.2turn))),
+    calc(50%*(1 - sin(.1turn))) calc(50%*(1 - cos(.4turn))) 
+   ); 
 }
-
 .save__project{
     color: brown;
     font-size: 30px;
