--- a/src/pages/project-detail/projectDetail.css
+++ b/src/pages/project-detail/projectDetail.css
@@ -31,7 +31,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 250px;
+    margin-top: 20ed0px;
 }
 .no__result > p {
     font-size: 70px;
