--- a/src/pages/project-detail/projectDetail.css
+++ b/src/pages/project-detail/projectDetail.css
@@ -1,6 +1,5 @@
 .detail{
     display: flex;
-    flex-direction: column;
     gap: 1rem;
 }
 .detail__info{
@@ -31,7 +30,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 20ed0px;
+    margin-top: 20px;
 }
 .no__result > p {
     font-size: 70px;
